--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.24.6",
+    "gh-pages": "^2.0.1",
     "gulp": "^3.9.1",
     "source": "0.0.3",
     "vinyl-source-stream": "^2.0.0"
