--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "BSD-2-Clause",
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.24.6",
     "gh-pages": "^2.0.1",
