--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "BSD-2-Clause",
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "browser-sync": "^2.24.6",
     "gh-pages": "^2.0.1",
     "gulp": "^3.9.1",
@@ -21,8 +23,8 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
-    "@ledgerhq/hw-app-eth": "^4.21.0",
-    "@ledgerhq/hw-transport-u2f": "^4.21.0",
+    "@ledgerhq/hw-app-eth": "^4.32.0",
+    "@ledgerhq/hw-transport-u2f": "^4.32.0",
     "babel-runtime": "^6.26.0",
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
